feat(task): dispatch agents over A2A and expose MCP tools